[build-system]
requires = [
    "scikit-build-core",
]
build-backend = "scikit_build_core.build"

[project]
name = "fvdb"
version = "0.2.1"
license = { text = "Apache-2.0" }

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
build.verbose = true

[tool.scikit-build.cmake]
# Can override from command line using -C cmake.define.OPTION=value
define.FVDB_BUILD_TESTS = false
define.FVDB_BUILD_BENCHMARKS = false
